--- a/week9/index.html
+++ b/week9/index.html
@@ -21,7 +21,7 @@
     <!-- <script src="discussion.js" type="module"></script> -->
 </head>
 <body>
-    <h1>Harry Potter & The Socrerer's Stone</h1>
+    <h1>Harry Potter & The Sorcerer's Stone</h1>
 
     <!-- canvas -->
     <canvas class="webgl"></canvas>
